# templateForgeAi

./: .env  .env.example  .gitignore  BEFORE_AFTER_COMPARISON.md  BEGINNERS_GUIDE.md  CATEGORIES_VS_PRODUCTS_CLARIFICATION.md  DISK_SPACE_FIX.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATES.md  FINAL_SUMMARY.md  GIT_COMMIT_MESSAGE.txt  Makefile  NEXT_STEPS.md  NOTHING_IS_BROKEN.md  OLLAMA_FIX.md  PRODUCTION_READY.md  QUALITY_ASSURANCE_REPORT.md  QUICK_START.md  README.md  REVIEW_COMPLETE_CHECKLIST.md  REVIEW_SUMMARY.txt  SETUP_COMPLETE.md  SIDEBAR_FIX_APPLIED.md  START_HERE.md  STRANDS_1.10_UPDATE.md  STRANDS_DOWNGRADE.md  STRANDS_FIX_v2.md  SYSTEM_READY.md  TROUBLESHOOTING_POETRY.md  YOU_SHOULD_BE_PROUD.md  pyproject.toml  requirements.txt  run_test.sh  test_ollama.py  test_strands_update.py  verify_setup.py
docs/: REPOSITORY_STRUCTURE.md
docs/categoriies_app_scraper/: 01_Architecture.md  02_How_To_Add_Retailer.md  05_Selectors_Guide.md  cat_url_prd_00_Project_Overview.md  cat_url_prd_01_Technical_Specification.md  clicks.ts  concurrency.json  dischem.ts  faithfultonature.ts  wellnesswarehouse.ts
docs/category_res_eng_guide/: 00_Project_Overview.md  01_Technical_Specification.md  02_Architecture_Design.md  03_Implementation_Guide.md  04_Testing_Strategy.md  05_Blueprint_Schema.md  06_FAQ_and_Troubleshooting.md  07_Prompt_Engineering_Guide.md  08_Real_World_Examples.md  09_Cost_Analysis_and_ROI.md  10_Quick_Reference.md  11_Migration_Strategy.md  AGENT_FRAMEWORK_GUIDE.md  AI_AGENT_VS_TYPESCRIPT_SCRAPER.md  (+16 more)
scripts/: verify_setup.py
(+82 files in other folders)
